[package]
name = "rlox"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[workspace]
members = ["rlox_macros"]

[dependencies]
rlox_macros = { path = "rlox_macros" }
anyhow = "1.0.95"
colored = "3.0.0"
rustc-hash = "2.1.1"

[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml"] }
serde = { version = "1.0.218", features = ["derive"] }
